--- a/multiple_function_for_iter/CMakeLists.txt
+++ b/multiple_function_for_iter/CMakeLists.txt
@@ -1,12 +1,18 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 
-project(ground_filtering)
+project(itergrated)
 
 find_package(PCL 1.3 REQUIRED)
 
+message(STATUS "PCL_INCLUDE_DIRS = ${PCL_INCLUDE_DIRS}")
+message(STATUS "PCL_LIBRARY_DIRS = ${PCL_LIBRARY_DIRS}")
+message(STATUS "PCL_LIBRARIES    = ${PCL_LIBRARIES}")
+message(STATUS "PCL_FOUND        = ${PCL_FOUND}")
+
+include_directories(include)
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
-add_executable (cluster cluster.cpp)
-target_link_libraries (cluster ${PCL_LIBRARIES})
+add_executable (itergrated obstacle_detection_improve.cpp)
+target_link_libraries (itergrated ${PCL_LIBRARIES})
